@@ -29,7 +29,6 @@ import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -90,13 +89,13 @@ public class H2SourceTest {
     private Set<List<String>> getExpectedResult() {
         //Create expected system
         Set<List<String>> expected = new HashSet<>();
-        expected.add(Arrays.asList("1", "Paulo", "2500"));
-        expected.add(Arrays.asList("2", "Pedro", "2700"));
-        expected.add(Arrays.asList("3", "Joao", "2800"));
-        expected.add(Arrays.asList("4", "Maria", "2000"));
-        expected.add(Arrays.asList("5", "Joselito", "1500"));
-        expected.add(Arrays.asList("6", "Linhares", "2200"));
-        expected.add(Arrays.asList("7", "Lagreca", "1000"));
+        expected.add(List.of("1", "Paulo", "2500"));
+        expected.add(List.of("2", "Pedro", "2700"));
+        expected.add(List.of("3", "Joao", "2800"));
+        expected.add(List.of("4", "Maria", "2000"));
+        expected.add(List.of("5", "Joselito", "1500"));
+        expected.add(List.of("6", "Linhares", "2200"));
+        expected.add(List.of("7", "Lagreca", "1000"));
         return expected;
     }
 
