@@ -22,7 +22,6 @@ package xyz.ottr.lutra.store;
  * #L%
  */
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
@@ -229,7 +228,7 @@ public interface TemplateStore extends Consumer<Signature> {
      *          results in empty Result-objects
      */ 
     default ResultStream<Template> getTemplates(Set<String> iris) {
-        return new ResultStream<>(iris.stream().map(iri -> getTemplate(iri)));
+        return new ResultStream<>(iris.stream().map(this::getTemplate));
     }
 
     /**
@@ -268,7 +267,7 @@ public interface TemplateStore extends Consumer<Signature> {
 
         if (!containsTemplate(instance.getIRI())) {
             // Need to fetch missing template
-            MessageHandler messages = fetchMissingDependencies(Arrays.asList(instance.getIRI()));
+            MessageHandler messages = fetchMissingDependencies(List.of(instance.getIRI()));
             Result<Instance> insWithMsgs = Result.of(instance);
             messages.toSingleMessage("Fetch missing template: " + instance.getIRI())
                 .ifPresent(insWithMsgs::addMessage);
